# pyrfs

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.md  Makefile  README.md  README.qmd  mkdocs.yml  netlify.toml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  release.yml
docs/: PROGRESS.md  coming-from-r.md  index.md  pyfs-architecture.md  pyfs-ux.md  pyrfs-architecture.md  pyrfs-ux.md
docs/api/: dirs.md  files.md  fspath.md  info-temp-errors.md  links.md  paths.md  predicates-ids.md  values.md
docs/design/: PROGRESS.md  pyrfs-architecture.md  pyrfs-ux.md
docs/guides/: safety-and-errors.md  three-surfaces.md  typed-values.md
docs/tour/: pyrfs-tour.ipynb
examples/: pyfs-tour.ipynb  pyrfs-tour.ipynb
pyfs/: __init__.py  display.py  errors.py  fspath.py  info.py  values.py
pyfs/_engine/: __init__.py  dirops.py  entry_types.py  fileops.py  ids.py  linkops.py  paths.py  predicates.py  temp.py  vectorize.py
pyfs/_pandas/: __init__.py  accessor.py  arrays.py  dtypes.py  frames.py
pyrfs/: __init__.py  display.py  errors.py  fspath.py  info.py  values.py
pyrfs/_engine/: __init__.py  dirops.py  entry_types.py  fileops.py  linkops.py  paths.py  predicates.py  temp.py  vectorize.py
pyrfs/_pandas/: __init__.py  accessor.py  arrays.py  dtypes.py  frames.py
tests/: test_dirops.py  test_display_colour.py  test_display_fmt.py  test_display_tidy.py  test_docstrings.py  test_fileops.py  test_fspath.py  test_import.py  test_info_surface.py  test_linkops.py  test_pandas.py  test_paths.py  test_predicates.py  test_temp.py  test_values.py  test_vectorize.py
